Botão voltar na nav-bar

--- a/signUpEmpresa.html
+++ b/signUpEmpresa.html
@@ -35,8 +35,7 @@
                 </li>
                 <div class="posicaoBotaoTopo">
                   <li class="nav-item me-2">
-                    <a role="button" class="nav-link btn botao-light" href="" class="card-link"
-                      data-toggle="modal" data-target="#sitemodal">Entrar</a>
+                    <a role="button" class="nav-link btn botao-light" href="typeofSignUp.html">Voltar</a>
                   </li>
                 </div>
               </ul>
